--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.5.0
+autopep8==1.6.0
 backports.zoneinfo==0.2.1
 certifi==2021.10.8
 cffi==1.15.0
@@ -8,6 +9,7 @@ coreschema==0.0.4
 cryptography==36.0.2
 defusedxml==0.7.1
 Django==4.0.4
+django-cors-headers==3.11.0
 django-templated-mail==1.1.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==4.8.0
@@ -17,6 +19,7 @@ itypes==1.2.0
 Jinja2==3.1.1
 MarkupSafe==2.1.1
 oauthlib==3.2.0
+pycodestyle==2.8.0
 pycparser==2.21
 PyJWT==2.3.0
 python3-openid==3.2.0
@@ -27,6 +30,7 @@ six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.2.0
 sqlparse==0.4.2
+toml==0.10.2
 tzdata==2022.1
 uritemplate==4.1.1
 urllib3==1.26.9
